# simple_python_scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  analyze.py  browser_crawler.py  config.yaml  config_loader.py  crawl.py  csv_report.py  docker-compose.yml  main.py  pyproject.toml  report_generator.py  test_crawl.py  test_enhanced_features.py  visualizer.py
examples/: basic_analysis.sh  scheduler_example.py
