[project]
name = "scraper"
version = "0.1.0"
description = "A production-ready site analysis and reconnaissance tool for planning web scraping projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "networkx>=3.2",
    "plotly>=5.18",
    "pyvis>=0.3",
    "pyyaml>=6.0",
    "robotexclusionrulesparser>=1.7",
    "tqdm>=4.66",
    "rich>=13.7",
]
